--- a/styles.css
+++ b/styles.css
@@ -1,161 +1,221 @@
+:root {
+  --background: #edf6f9;
+  --primary: #83c5be;
+  --secondary: #006d77;
+  --tertiary: #064789;
+  --quaternary: #1b1b1e;
+  --quinary: #e8e8e8;
+}
+
 /* Reset some default browser styles */
-body, h1, h2, p {
-    margin: 0;
-    padding: 0;
+body,
+h1,
+h2,
+p {
+  margin: 0;
+  padding: 0;
 }
 
 /* Global styles */
 body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    margin: 0;
-    background-color: #333;
+  font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  background: linear-gradient(180deg, #22577a 0%, #c7f9cc 100%);
+  -webkit-animation: Animation 5s ease infinite;
+  -moz-animation: Animation 5s ease infinite;
+  animation: Animation 5s ease infinite;
+}
+
+@-webkit-keyframes Animation {
+    0%{background-position:10% 0%}
+    50%{background-position:91% 100%}
+    100%{background-position:10% 0%}
+}
+@-moz-keyframes Animation {
+    0%{background-position:10% 0%}
+    50%{background-position:91% 100%}
+    100%{background-position:10% 0%}
+}
+@keyframes Animation { 
+    0%{background-position:10% 0%}
+    50%{background-position:91% 100%}
+    100%{background-position:10% 0%}
 }
 
 .container {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    max-width: 800px;
-    padding: 0 20px; /* Add padding for better mobile readability */
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  max-width: 800px;
+  padding: 0 20px; /* Add padding for better mobile readability */
 }
 
 header {
-    background-color: #333;
-    color: #fff;
-    padding: 20px 0;
-    position: relative;
+  color: var(--primary);
+  padding: 20px 0;
+  position: relative;
 
-    z-index: 1;
+  z-index: 1;
 }
 
 h1 {
-    font-size: 36px;
-    margin-bottom: 10px;
+  font-size: 36px;
+  margin-bottom: 10px;
+  font-weight: bold;
 }
 
 h2 {
-    font-size: 24px;
+  font-size: 24px;
+    margin-bottom: 10px;
+    font-weight: bold;
 }
 
 main {
-    margin: 20px 0;
+  margin: 20px 0;
 }
 
 iframe {
-    display: block;
-    border: none;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: block;
+  border: none;
+  box-shadow: 0 0 10px #c8d5b9a8;
 }
 
 .twitch-iframe {
-    width: 90vw;
-    height: 60vh;
-    max-width: 800px;
-    max-height: 450px;
+  width: 90vw;
+  height: 60vh;
+  max-width: 800px;
+  max-height: 450px;
 }
 
 footer {
-    background-color: #333;
-    color: #fff;
-    padding: 10px 0;
+  width: 100vw;
+  background-color: var(--primary);
+  color: var(--tertiary);
+  padding: 10px;
+  text-align: center;
+  position: relative;
+  z-index: 1;
+  margin-top: 100px;
 }
 
 body {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
-
 
 /* Twitch Overlay Styles */
 .iframe-container {
-    display: none;
-    position: relative;
-    z-index: 0;
+  display: none;
+  position: relative;
+  z-index: 0;
 }
 
 .overlay-twitch {
-    position: absolute;
-    top: 85.4%;
-    left: 523px;
-    width: 78px;
-    height: 50px;
-    background: rgb(255, 0, 0); /* Adjust the transparency (0.5 for 50% transparency) */
-    z-index: 2;
+  position: absolute;
+  top: 78.7%;
+  left: 90.3%;
+  width: 78px;
+  height: 50px;
+  background: rgba(
+    255,
+    0,
+    0,
+    0
+  ); /* Adjust the transparency (0.5 for 50% transparency) */
+  z-index: 2;
 }
 
 .overlay-twitch-channel-name {
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    width: 200px;
-    height: 50px;
-    background: rgb(255, 0, 0); /* Adjust the transparency (0.5 for 50% transparency) */
-    z-index: 2;
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  width: 200px;
+  height: 50px;
+  background: rgba(
+    255,
+    0,
+    0,
+    0
+  ); /* Adjust the transparency (0.5 for 50% transparency) */
+  z-index: 2;
 }
 
 /* Login Form Styles */
 .login-container {
-    margin: 0;
+  margin: 0;
 }
 
 .login-form {
-    background-color: #fff;
-    padding: 20px 40px;
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    height: 30vh;
-    width: 50vw;
-    max-width: 300px;
+  padding: 20px 40px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 0 10px #c8d5b9a8;
+  height: 30vh;
+  width: 50vw;
+  color: var(--secondary);
+  max-width: 300px;
+  background: var(--primary);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(8.9px);
+  -webkit-backdrop-filter: blur(8.9px);
+}
+
+button:hover {
+  transform: scale(1.1);
+}
+
+.login-form h2 {
+  margin-bottom: 20px;
 }
 
 input {
-    width: 100%;
-    padding: 10px;
-    margin: 5px 0;
-    border: 1px solid #ccc;
-    border-radius: 3px;
+  width: 100%;
+  padding: 10px;
+  margin: 5px 0;
+  border: 2px solid var(--secondary);
+  border-radius: 10px;
 }
 
 button {
-    width: 100%;
-    padding: 10px;
-    background-color: #333;
-    color: #fff;
-    border: none;
-    border-radius: 3px;
-    cursor: pointer;
+  width: 100%;
+  padding: 10px;
+  background-color: var(--secondary);
+  color: #fff;
+  border: none;
+  margin: 20px;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
 }
 
 .error-message {
-    color: red;
-    margin-top: 10px;
+  color: red;
+  margin-top: 10px;
 }
 
-
 #logout-button {
-    margin-top: 20px;
-    background-color: #ff0000;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    width: 50vw;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    transition: background-color 0.3s ease-in-out;
+  margin-top: 20px;
+  background-color: #ff0000;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  width: 50vw;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s ease-in-out;
 }
 
 #logout-button:hover {
-    background-color: #cc0000; /* Darker red on hover */
+  background-color: #cc0000; /* Darker red on hover */
 }
