--- a/styles.css
+++ b/styles.css
@@ -82,11 +82,11 @@ body {
 
 .overlay-twitch {
     position: absolute;
-    top: 85.4%;
-    left: 523px;
+    top: 78.7%;
+    left: 90.3%;
     width: 78px;
     height: 50px;
-    background: rgb(255, 0, 0); /* Adjust the transparency (0.5 for 50% transparency) */
+    background: rgba(255, 0, 0, 0); /* Adjust the transparency (0.5 for 50% transparency) */
     z-index: 2;
 }
 
@@ -96,7 +96,7 @@ body {
     left: 0%;
     width: 200px;
     height: 50px;
-    background: rgb(255, 0, 0); /* Adjust the transparency (0.5 for 50% transparency) */
+    background: rgba(255, 0, 0, 0); /* Adjust the transparency (0.5 for 50% transparency) */
     z-index: 2;
 }
 
