--- a/styles.css
+++ b/styles.css
@@ -1,172 +1,182 @@
 :root {
-    --background: #edf6f9;
-    --primary: #83c5be;
-    --secondary: #006d77;
-    --tertiary: #064789;
-    --quaternary: #1b1b1e;
-    --quinary: #e8e8e8;
-  }
-  
-  /* Reset some default browser styles */
-  body, h1, h2, p, input, button {
-    margin: 0;
-    padding: 0;
-  }
-  
-  /* Global styles */
-  body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-    background: linear-gradient(180deg, #22577a 0%, #c7f9cc 100%);
-    animation: Animation 5s ease infinite;
-  }
-  
-  @keyframes Animation {
-    0% { background-position: 10% 0%; }
-    50% { background-position: 91% 100%; }
-    100% { background-position: 10% 0%; }
-  }
-  
-  .container {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    max-width: 800px;
-    padding: 0 20px;
-  }
-  
-  header {
-    color: var(--primary);
-    padding: 20px 0;
-    position: relative;
-    z-index: 1;
-  }
-  
-  h1, h2 {
-    font-size: 36px;
-    margin-bottom: 10px;
-    font-weight: bold;
-  }
-  
-  main {
-    margin: 20px 0;
-  }
-  
-  iframe {
-    display: block;
-    border: none;
-    box-shadow: 0 0 10px #c8d5b9a8;
-  }
-  
-  .twitch-iframe {
-    width: 90vw;
-    height: 60vh;
-    max-width: 800px;
-    max-height: 450px;
-  }
-  
-  footer {
-    width: 100vw;
-    background-color: var(--primary);
-    color: var(--tertiary);
-    padding: 10px;
-    text-align: center;
-    position: relative;
-    z-index: 1;
-    margin-top: 100px;
-  }
-  
-  /* Twitch Overlay Styles */
-  .iframe-container {
-    display: none;
-    position: relative;
-    z-index: 0;
-  }
-  
-  .overlay {
-    position: absolute;
-    top: 85.4%;
-    left: 523px;
-    width: 78px;
-    height: 50px;
-    background: rgba(255, 0, 0, 0);
-    z-index: 2;
-  }
-  
-  /* Login Form Styles */
-  .login-form {
-    padding: 20px 40px;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0 0 10px #c8d5b9a8;
-    height: 30vh;
-    width: 50vw;
-    color: var(--secondary);
-    max-width: 300px;
-    background: var(--primary);
-    border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(8.9px);
-    -webkit-backdrop-filter: blur(8.9px);
-  }
-  
-  .login-form h2 {
-    margin-bottom: 20px;
-  }
-  
-  input {
-    width: 100%;
-    padding: 10px;
-    margin: 5px 0;
-    border: 2px solid var(--secondary);
-    border-radius: 10px;
-  }
-  
-  button {
-    width: 100%;
-    padding: 10px;
-    background-color: var(--secondary);
-    color: #fff;
-    border: none;
-    margin: 20px 0;
-    border-radius: 50px;
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
-  }
-  
-  button:hover {
-    transform: scale(1.1);
-  }
-  
-  .error-message {
-    color: red;
-    margin-top: 10px;
-  }
-  
-  #logout-button {
-    margin-top: 20px;
-    background-color: #ff0000;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    width: 50vw;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    transition: all 0.3s ease-in-out;
-  }
-  
-  #logout-button:hover {
-    background-color: #cc0000;
-  }
-  
+  --background: #dadada;
+  --primary: #83c5be;
+  --secondary: #006d77;
+  --tertiary: #064789;
+  --quaternary: #1b1b1e;
+  --quinary: #e8e8e8;
+}
+
+/* Reset some default browser styles */
+body, h1, h2, p, input, button {
+  margin: 0;
+  padding: 0;
+}
+
+/* Global styles */
+body {
+  font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+  height: 100vh;
+  background: var(--background);
+  background-color: linear-gradient(45deg, #d2dae2 25%, transparent 25%), linear-gradient(-45deg, #d2dae2 25%, transparent 25%), linear-gradient(45deg, transparent 75%, #d2dae2 75%), linear-gradient(-45deg, transparent 75%, #d2dae2 75%);
+}
+
+.container {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  max-width: 800px;
+  padding: 0 20px;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 20px;
+  box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.1),
+              -10px -10px 30px rgba(255, 255, 255, 0.5);
+}
+
+header {
+  color: var(--primary);
+  padding: 20px 0;
+  position: relative;
+  z-index: 1;
+}
+
+h1, h2 {
+  font-size: 36px;
+  margin-bottom: 10px;
+  font-weight: bold;
+}
+
+main {
+  margin: 20px 20px;
+}
+
+iframe {
+  display: block;
+  border: none;
+  box-shadow: 0 0 10px rgba(200, 200, 200, 0.8);
+}
+
+.twitch-iframe {
+  width: 90vw;
+  height: 60vh;
+  max-width: 800px;
+  max-height: 450px;
+}
+
+footer {
+  width: 100vw;
+  background-color: var(--primary);
+  color: var(--tertiary);
+  padding: 10px;
+  text-align: center;
+  position: relative;
+  z-index: 1;
+  margin-top: 100px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  box-shadow: 0 -5px 15px rgba(0, 0, 0, 0.1),
+              0 5px 15px rgba(0, 0, 0, 0.1);
+}
+
+/* Twitch Overlay Styles */
+.iframe-container {
+  display: none;
+  position: relative;
+  z-index: 0;
+}
+
+.overlay {
+  position: absolute;
+  top: 85.4%;
+  left: 523px;
+  width: 78px;
+  height: 50px;
+  background: rgba(255, 0, 0, 0);
+  z-index: 2;
+}
+
+/* Login Form Styles */
+.login-form {
+  padding: 20px 40px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  height: 30vh;
+  width: 50vw;
+  color: var(--secondary);
+  max-width: 300px;
+  background: var(--background);
+  border-radius: 20px;
+  box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.1),
+              -10px -10px 30px rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(8.9px);
+  -webkit-backdrop-filter: blur(8.9px);
+}
+
+.login-form h2 {
+  margin-bottom: 20px;
+}
+
+input {
+  width: 100%;
+  padding: 10px;
+  margin: 5px 0;
+  border: 2px solid var(--secondary);
+  border-radius: 10px;
+  background: var(--background);
+  box-shadow: inset 5px 5px 10px rgba(0, 0, 0, 0.1),
+              inset -5px -5px 10px rgba(255, 255, 255, 0.5);
+}
+
+button {
+  width: 100%;
+  padding: 10px;
+  background-color: var(--secondary);
+  color: #fff;
+  border: none;
+  margin: 20px 0;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1),
+              -5px -5px 10px rgba(255, 255, 255, 0.5);
+}
+
+button:hover {
+  background-color: var(--tertiary);
+}
+
+.error-message {
+  color: red;
+  margin-top: 10px;
+}
+
+#logout-button {
+  margin-top: 20px;
+  background-color: #ff0000;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  width: 50vw;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1),
+              -5px -5px 10px rgba(255, 255, 255, 0.5);
+}
+
+#logout-button:hover {
+  background-color: #cc0000;
+}
