--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,6 @@ body {
   margin: 20px;
   height: 100vh;
   background: var(--background);
-  background-color: linear-gradient(45deg, #d2dae2 25%, transparent 25%), linear-gradient(-45deg, #d2dae2 25%, transparent 25%), linear-gradient(45deg, transparent 75%, #d2dae2 75%), linear-gradient(-45deg, transparent 75%, #d2dae2 75%);
 }
 
 .container {
@@ -71,148 +70,17 @@ iframe {
   max-height: 450px;
 }
 
-.youtube-iframe {
+video {
   width: 90vw;
   height: 60vh;
   max-width: 800px;
   max-height: 450px;
 }
 
-footer {
-  width: 100vw;
-  background-color: var(--primary);
-  color: var(--tertiary);
-  padding: 10px;
-  text-align: center;
-  position: relative;
-  z-index: 1;
-  margin-top: 100px;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
-  box-shadow: 0 -5px 15px rgba(0, 0, 0, 0.1),
-              0 5px 15px rgba(0, 0, 0, 0.1);
-}
 
 /* Twitch Overlay Styles */
 .iframe-container {
   display: block;
   position: relative;
   z-index: 0;
-}
-
-.overlay {
-  position: absolute;
-  top: 85.4%;
-  left: 523px;
-  width: 78px;
-  height: 50px;
-  background: rgba(255, 0, 0, 0);
-  z-index: 2;
-}
-
-/* Login Form Styles */
-.login-form {
-  padding: 20px 40px;
-  border-radius: 10px;
-  display: none;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  height: 30vh;
-  width: 50vw;
-  color: var(--secondary);
-  max-width: 300px;
-  background: var(--background);
-  border-radius: 20px;
-  box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.1),
-              -10px -10px 30px rgba(255, 255, 255, 0.5);
-  backdrop-filter: blur(8.9px);
-  -webkit-backdrop-filter: blur(8.9px);
-}
-
-.login-form h2 {
-  margin-bottom: 20px;
-}
-
-input {
-  width: 100%;
-  padding: 10px;
-  margin: 5px 0;
-  border: 2px solid var(--secondary);
-  border-radius: 10px;
-  background: var(--background);
-  box-shadow: inset 5px 5px 10px rgba(0, 0, 0, 0.1),
-              inset -5px -5px 10px rgba(255, 255, 255, 0.5);
-}
-
-button {
-  width: 100%;
-  padding: 10px;
-  background-color: var(--secondary);
-  color: #fff;
-  border: none;
-  margin: 20px 0;
-  border-radius: 50px;
-  cursor: pointer;
-  transition: all 0.3s ease-in-out;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1),
-              -5px -5px 10px rgba(255, 255, 255, 0.5);
-}
-
-button:hover {
-  background-color: var(--tertiary);
-}
-
-.error-message {
-  color: red;
-  margin-top: 10px;
-}
-
-#logout-button {
-  margin-top: 20px;
-  background-color: #ff0000;
-  color: #fff;
-  border: none;
-  padding: 10px 20px;
-  width: 50vw;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 16px;
-  transition: all 0.3s ease-in-out;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1),
-              -5px -5px 10px rgba(255, 255, 255, 0.5);
-}
-
-#logout-button:hover {
-  background-color: #cc0000;
-}
-/* Server Buttons Styles */
-.servers {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 20px;
-}
-
-.serverBtn {
-  padding: 10px 20px;
-  background-color: var(--secondary);
-  color: #fff;
-  border: none;
-  margin: 0 10px 20px 10px;
-  border-radius: 30px;
-  cursor: pointer;
-  transition: all 0.3s ease-in-out;
-  box-shadow: 
-    5px 5px 10px rgba(0, 0, 0, 0.1),
-    -5px -5px 10px rgba(255, 255, 255, 0.5);
-}
-
-.serverBtn:active {
-  background-color: var(--tertiary);
-}
-
-.serverBtn:hover {
-  background-color: var(--tertiary);
 }
